--- a/_data/headlines.yml
+++ b/_data/headlines.yml
@@ -1,22 +1,20 @@
 -
-    title: "Puis-je vous demander le mot de passe de votre ordinateur, de votre
-    boîte mail et de votre compte Facebook ? Promis, je ne ferai rien de mal,
-    seulement lire."
+    title: "Darf ich Ihnen nach dem Passwort Ihres Rechners, Ihre Email
+    und Ihre Facebookkonto fragen? Ich verspreche, ich werde nichts böses tun,
+    nur lesen."
     content: >
-        Comment oseriez-vous répondre _non_ ? Lorsque vous n'avez rien à cacher,
-        vous ne pouvez pas faire de **distinction** entre ce que vous admettez
-        rendre public et ce qui vous dérange un peu plus. Dès lors que vous
-        imposez une **barrière**, vous avez quelque chose à cacher (et c'est
-        bien normal !).
+        Wie können Sie wagen, _nein_ zu sagen? Wenn Sie nichts zu verbergen haben,
+        Sie dürfen keine **Unterscheidung"" zwischen was Sie veröffentlichen und 
+        was Sie etwa mehr stört. Ab dem Moment wo Sie eine **Grenze** ziehen, 
+        Sie haben etwas zu verbergen. (und es ist völlig normal!).
 
 
-        Nous autres, êtres humains, nous distinguons les uns des autres parce
-        que nous avons tous une [**vie
-        privée**](https://fr.wikipedia.org/wiki/Article_8_de_la_Convention_europ%C3%A9enne_des_droits_de_l%27homme),
-        une **intimité** que nous ne dévoilons pas à tout bout de champ.
+        Wir Menschen unterscheiden uns voneinander indem wir alle eine 
+        [**Privatleben**](https://de.wikipedia.org/wiki/Europ%C3%A4ische_Menschenrechtskonvention#Artikel_8_.E2.80.93_Recht_auf_Achtung_des_Privat-_und_Familienlebens),
+        eine Intimsphäre, denn wir nicht ständig offenbaren.
 
 -
-    title: "Si vous ne le faites pas pour vous, faites-le pour moi !"
+    title: "Wenn Sie es nicht für sich machen, machen Sie es für mich!"
     content: >
         <a href="http://internetetmoi.fr/blog/474-degres-de-separation/"><img src="/images/degres-sep.png" class="pull-right img-responsive floating-image img-thumbnail"></a>
         <a class="label label-info" href="/surveillance.html">surveillance</a>
