fixed missing tag in headlines

--- a/_data/headlines.yml
+++ b/_data/headlines.yml
@@ -17,7 +17,7 @@
     title: "Wenn Sie es nicht für sich machen, machen Sie es für mich!"
     content: >
         <a href="http://internetetmoi.fr/blog/474-degres-de-separation/"><img src="/images/degres-sep.png" class="pull-right img-responsive floating-image img-thumbnail"></a>
-        <a class="label label-info" href="/surveillance.html">surveillance</a>
+        <a class="label label-info" href="/ueberwachung.html">Überwachung</a>
         Seit Jahren, Behörden und anderen Geheimdienste versuchen Sozialnetze 
         zu baueh, die **Bezihungen zwischen Menschen** darstellen. Eine Person
         kann von heute auf morgen _interessant_ werden, entweder weil sie Bekannt 
